2016-04-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/pam-config.c (replace_obsolete_modules): Replace used, but
	obsolete and no longer installed modules with their successor.

2016-04-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/pam-config.8.xml-header: Document some missing options.

	* release version 0.90

	* update autoconf and automake files

2016-04-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/mod_pam_unix.c: Adjust list of parameters for new
	pam_unix.so.
	* src/pam-modules.h: Add more macros with different number of
	arguments.

2016-04-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.89

	* src/Makefile.am: Add pam_google_authenticator.
	* src/supported-modules.h: Likewise.
	* src/src/mod_pam_google_authenticator.c: New.
	pam_google_authenticator patch from Darin Perusich [bsc#888149].

	* src/sanity_checks.c (check_for_pam_module): Don't check only
	for /lib*/security, but also if /lib*/libpam.so.0 exist.

2014-09-25  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.88

	* src/mod_pam_ecryptfs.c: write PASSWORD rule [bsc#895096].

2014-04-02  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.87

	* src/mod_pam_access.c: New.
	* src/supported-modules.h: Ad pam_access.

2013-02-07  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.86

	* src/pam-config.c (main): Don't set sha512 per default,
	default is now read from /etc/login.defs by pam_unix.so
	[bnc#801970].

2013-02-04  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.85

	* src/pam-config.c (main): Re-add lost sha512 and shadow flags
	to pam_unix when creating common-passwd-pc file [bnc#801970]

2012-11-12  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.84

	* src/pam-config.c (relink): Don't print wrong error messages,
	enable pam_env by default.

2012-09-25  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.83

	* src/pam-module.h (DECLARE_BOOL_OPTS_16): New define for 16
	boolean arguments.
